# Bank-Management-System

./: README.md
bank_system_clean/: CMakeLists.txt  account.cpp  bank.h  cheque.cpp  credit.cpp  debit.cpp  fd.cpp  flask_app.py  globals.cpp  loan.cpp  main.cpp  report.cpp  requirements.txt  run_html_ui.bat  upi.cpp  utils.cpp
bank_system_clean/ui_code/: app.js  code(1).html  code(2).html  code(3).html  code(4).html  code(5).html  code(6).html  code(7).html  code.html
